# stifc

./: .gitattributes  .gitignore  AnnexE.ifc  AnnexE1.ifc  CreateModel.py  CreateModel2.py  README.md  ScratchPad.py  TestModel.ifc  Units.md  Units.py  pyproject.toml  units.py  utils.py
conda.recipe/: meta.yaml
models/: AnnexE.ifc  AnnexE1.ifc
src/: node.py  structural_model.py  units.py  utils.py
src/stifc/: __init__.py  __main__.py  cli.py  utils.py
src/stifc/ifc/: ifc_utils.py  node.py  structural_model.py
tests/: test_utils.py
tests/ifc/: test_ifc_utils.py  test_node.py  test_structural_model.py  test_units.py
